--- a/dashboard.html
+++ b/dashboard.html
@@ -20,21 +20,24 @@
   <!-- Dashboard -->
   <main class="dashboard-container">
 
-    <!-- Account Balance -->
-    <div class="card balance-card">
-      <h3>Total Balance</h3>
-      <p class="balance">$1200,450.00</p>
-      <div class="mini-cards">
-        <div class="mini-card">
-          <h4>Checking</h4>
-          <p>$7,200.00</p>
-        </div>
-        <div class="mini-card">
-          <h4>Savings</h4>
-          <p>$500,250.00</p>
-        </div>
-      </div>
+  <!-- Account Balance -->
+<div class="card balance-card">
+  <h3>Total Balance</h3>
+  <p class="balance">$1,200,450.00</p>
+
+  <div class="mini-cards">
+    <div class="mini-card">
+      <h4>Checking Account</h4>
+      <p>$7,200.00</p>
+      <small>For everyday spending</small>
     </div>
+    <div class="mini-card">
+      <h4>Savings Account</h4>
+      <p>$500,250.00</p>
+      <small>For long-term savings</small>
+    </div>
+  </div>
+</div>
 
     <!-- Recent Transactions -->
     <div class="card transactions-card">
