--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chase Bank | Login</title>
+  <title>Online Bank | Login</title>
   <!-- Open Graph / Social Media -->
   <meta property="og:title" content="Chase Bank">
   <meta property="og:description" content="Manage your accounts, transfer funds, and pay bills securely online.">
@@ -22,8 +22,8 @@
 <body>
 
   <div class="login-card">
-    <h1>CHASE BANK</h1>
-    <p>Secure Banking Website</p>
+    <h1>ONLINE BANK</h1>
+    <p>Demo Banking Website</p>
 
   <form id="login-form">
     <input type="text" id="username" placeholder="Username" required>
