--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chase Bank | Login</title>
+  <title>Nova Bank | Login</title>
   <!-- Open Graph / Social Media -->
-  <meta property="og:title" content="Chase Bank">
+  <meta property="og:title" content="Nova Bank">
   <meta property="og:description" content="Manage your accounts, transfer funds, and pay bills securely online.">
   <meta property="og:image" content="https://chasebanking.github.io/ChaseBank/og-image.png">
   <meta property="og:url" content="https://chasebanking.github.io/ChaseBank/">
@@ -22,7 +22,7 @@
 <body>
 
   <div class="login-card">
-    <h1>CHASE BANK</h1>
+    <h1>NOVA BANK</h1>
     <p>Secure Banking Website</p>
 
   <form id="login-form">
@@ -47,7 +47,7 @@
     <a href="#">Terms & Conditions</a> | 
     <a href="#">Help</a>
   </div>
-  <small>&copy; 2026 JPMorgan Chase Bank, N.A. All rights reserved.</small>
+  <small>&copy; 2026 Nova Bank, All rights reserved.</small>
   </footer>
   
   <script src="script.js"></script>
