--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NovaBank Demo | Dashboard</title>
+  <title>Linux Bank | Dashboard</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -83,7 +83,7 @@
       <label for="bank">Select Bank</label>
       <select id="bank" required>
         <option value="" disabled selected>Choose Bank</option>
-        <option value="nova">Nova Bank</option>
+        <option value="Linux">Linux Bank</option>
         <option value="alpha">Alpha Fargo</option>
         <option value="orbit">Orbit Credit</option>
         <option value="agri">Agriculture Bank</option>
@@ -127,7 +127,7 @@
     <a href="#">Terms & Conditions</a> | 
     <a href="#">Help</a>
   </div>
-  <small>&copy; 2026 NovaBank Bank, All rights reserved.</small>
+  <small>&copy; 2026 Linux Bank, All rights reserved.</small>
 </footer>
   
 <!-- Profile Panel -->
