--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Open Graph / Social Media -->
   <meta property="og:title" content="Linux Bank">
   <meta property="og:description" content="Manage your accounts, transfer funds, and pay bills securely online.">
-  <meta property="og:image" content="https://chasebanking.github.io/ChaseBank/og-image.png">
+  <meta property="og:image" content="https://chasebanking.github.io/LinuxBranch/og-image.png">
   <meta property="og:url" content="https://chasebanking.github.io/ChaseBank/">
   <meta property="og:type" content="website">
 
