--- a/security.html
+++ b/security.html
@@ -18,7 +18,7 @@
   <div class="profile">
     <span>Front Page</span>
   </div>
-  <a href="index.html" class="logout-btn">Back</a>
+  <a href="dashboard.html" class="logout-btn">Back</a>
 </nav>
 
 <main class="info-page">
@@ -38,7 +38,7 @@
     Do not enter real personal or financial information on this site.
   </p>
 
-  <a href="index.html">← Back to Home</a>
+  <a href="dashboard.html">← Back to Home</a>
 </main>
 
 <footer class="login-footer">
