--- a/forget-username.html
+++ b/forget-username.html
@@ -31,7 +31,7 @@
   </main>
 
   <footer class="login-footer">
-    <small>Demo project only. No real services provided.</small>
+    <small>&copy; 2026 Front Page, All rights reserved.</small>
   </footer>
 
   <script>
