--- a/dashboard.html
+++ b/dashboard.html
@@ -139,7 +139,7 @@
   <div class="profile-header">
     <img src="avatar.jpg" alt="Avatar" class="avatar-large">
     <h3>John Williams</h3>
-    <p>john.williams@example.com</p>
+    <p>jsonwilliams084@gmail.com</p>
   </div>
   <div class="profile-actions">
     <button id="edit-profile">Edit Profile</button>
