--- a/error.html
+++ b/error.html
@@ -19,53 +19,57 @@
 
     .error-card {
       background: #ffffff;
-      max-width: 420px;
+      max-width: 440px;
       width: 90%;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+      padding: 35px 30px;
+      border-radius: 12px;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
       text-align: center;
+      line-height: 1.5;
     }
 
     .error-icon {
-      font-size: 48px;
+      font-size: 50px;
       color: #d93025;
-      margin-bottom: 15px;
+      margin-bottom: 18px;
     }
 
     h1 {
-      font-size: 20px;
-      margin-bottom: 12px;
+      font-size: 22px;
+      margin-bottom: 15px;
+      color: #d93025;
     }
 
     p {
-      font-size: 14px;
-      line-height: 1.6;
+      font-size: 15px;
       color: #555;
+      margin-bottom: 10px;
     }
 
     .timer {
-      margin-top: 15px;
-      font-size: 18px;
+      margin-top: 18px;
+      font-size: 20px;
       font-weight: 600;
       color: #005eb8;
     }
 
     .note {
-      margin-top: 10px;
+      margin-top: 12px;
       font-size: 13px;
       color: #777;
     }
 
     .btn {
-      margin-top: 25px;
+      margin-top: 28px;
       display: inline-block;
-      padding: 10px 18px;
+      padding: 12px 20px;
       background-color: #005eb8;
       color: #fff;
       text-decoration: none;
       border-radius: 6px;
       font-size: 14px;
+      font-weight: 500;
+      transition: background-color 0.2s;
     }
 
     .btn:hover {
@@ -81,13 +85,19 @@
     <h1>Transaction Unsuccessful</h1>
 
     <p>
-      For your security, this transaction has been blocked due to unusual account activity.  
+      ⚠️ For your security, this transaction has been blocked due to unusual account activity.
+    </p>
+    <p>
       To protect your account, transactions are temporarily unavailable.
     </p>
+    <p>
+      Multiple attempts may trigger further account restrictions. Please do not retry until the countdown ends.
+    </p>
+    <p>
+      Contact our support immediately if you believe this block is a mistake.
+    </p>
 
-    <div class="timer" id="countdown">
-      48:00:00
-    </div>
+    <div class="timer" id="countdown">72:00:00</div>
 
     <p class="note">
       Time remaining before you can retry this transaction.
@@ -97,8 +107,8 @@
   </div>
 
   <script>
-    // Set countdown time: 48 hours in seconds
-    let timeLeft = 48 * 60 * 60;
+    // Set countdown time: 72 hours in seconds
+    let timeLeft = 72 * 60 * 60; // 72 hours
 
     const countdownEl = document.getElementById("countdown");
 
